Fix bug: Relative elements from main content are displayed above (z-index) sticky header

--- a/_sass/my-styles.scss
+++ b/_sass/my-styles.scss
@@ -8,8 +8,8 @@ h1,h2,h3,h4,h5,h6,header,footer{
 }
 
 header.site-header{position:sticky;top:0;background-color:rgba(255,255,255,.9);
-  border-top: 0;
-  border-bottom: 5px solid;
+  z-index:10;
+  border-top: 0;border-bottom: 5px solid;
   border-image: linear-gradient(to right, $blue 33%, $green 33%, $green 67%, $red 67%) 5;
 }
 
